created a function that checks correct config file's fields and their presence

--- a/Tests/config.yml
+++ b/Tests/config.yml
@@ -1,6 +1,8 @@
 ---
- topic: provatopic
- function: fun1
- key: temperatura
+ topic: ciao/#
+ function:
+  - fun1
+  - fun2
  outTopic: provaouttopic
+ key: ciao
  outFormat: json
