added some message normalization functions and output convertion functions (to be tested), experimenting with mqtt publish and subscribe using a basic threaded interface

--- a/Tests/config.yml
+++ b/Tests/config.yml
@@ -1,8 +1,10 @@
 ---
  topic: ciao/#
  function:
-  - fun1
+  - split
   - fun2
+  - ciao
  outTopic: provaouttopic
  key: ciao
  outFormat: json
+ inFormat: yaml
