--- a/Tests/config.yml
+++ b/Tests/config.yml
@@ -1,9 +1,10 @@
 ---
+ broker: localhost
+ port: 1883
  topic: ciao/#
  function:
   - split
-  - fun2
-  - ciao
+
  outTopic: provaouttopic
  key: ciao
  outFormat: json
