fixed errors in yamlLoader, implemented a way to stop the execution of the whole program (janky). Pub test now publishes a lorem ipsum string

--- a/Tests/config2.yml
+++ b/Tests/config2.yml
@@ -1,11 +1,11 @@
 ---
  broker: localhost
  port: 1883
- inTopic: input/topic
+ topic: input/topico
  function:
   - removews
   - upper
- outTopic: output/topic
+ outTopic: output/topico
  key: ciao
  inFormat: yaml
  outFormat: json
