--- a/Tests/config.yml
+++ b/Tests/config.yml
@@ -14,8 +14,7 @@
    - name
    - city
    - age
- inFormat: json
- outFormat: xml
+ format: json
 ---
  broker: localhost
  port: 1883
@@ -25,5 +24,4 @@
  outTopic: output/topic
  retain: True
  parameters: ciao
- inFormat: json
- outFormat: json
+ format: csv
